--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "openfl": "^7.0.0-beta.7",
+    "swf-loader": "^1.0.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
